feature(byAuthor): repo + service + controller + tests